Schedule Section Done

--- a/index.html
+++ b/index.html
@@ -14,64 +14,91 @@
 </head>
 
 <body>
-    <div class="upper-bar position-relative pt-3">
-        <div class="top-bar position-relative d-flex justify-content-between align-items-center container">
-            <img src="assests/images/logo/logo.png" alt="Dentist Logo">
-            <div class="contact">
-                <span class="small px-3 py-2 me-2">+953 012 3654 896</span>
-                <span class="small px-3 py-2">support@colorlib.com</span>
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        </div>
-        <nav class="navbar z-1 navbar-expand container position-absolute start-50 translate-middle-x mt-3">
-            <div class="container-fluid d-flex">
-                <ul class="navbar-nav mb-2 mb-lg-0 text-uppercase small">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Opening Hour</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-white" href="#" role="button">
-                            Blog <i class="fa-solid fa-angle-down small"></i>
-                        </a>
-                        <ul class="dropdown-menu border-0 rounded-0 flex-column">
-                            <li><a class="dropdown-item small text-capitalize" href="#">Blog Home</a></li>
-                            <li><a class="dropdown-item small text-capitalize" href="#">Blog Single</a></li>
-                            <li><a class="dropdown-item small text-capitalize" href="#">Level 2</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Elements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact</a>
-                    </li>
-                </ul>
-                <div class="social-icons d-flex gap-3">
-                    <a href="#" class="text-white-50 small"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="text-white-50 small"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="text-white-50 small"><i class="fa-brands fa-dribbble"></i></a>
-                    <a href="#" class="text-white-50 small"><i class="fa-brands fa-behance"></i></a>
+    <div class="top-bar sticky-top bg-white">
+        <div class="upper-bar position-relative pt-3">
+            <div class="top-upper-bar position-relative d-flex justify-content-between align-items-center container">
+                <img src="assests/images/logo/logo.png" alt="Dentist Logo">
+                <div class="contact">
+                    <span class="small px-3 py-2 me-2">+953 012 3654 896</span>
+                    <span class="small px-3 py-2">support@colorlib.com</span>
+                    <i class="fa-solid fa-bars d-none"></i>
                 </div>
             </div>
-        </nav>
+            <nav class="navbar z-1 navbar-expand container position-absolute start-50 translate-middle-x mt-3">
+                <div class="container-fluid d-flex">
+                    <ul class="navbar-nav mb-2 mb-lg-0 text-uppercase small">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Opening Hour</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-white" href="#" role="button">
+                                Blog <i class="fa-solid fa-angle-down small"></i>
+                            </a>
+                            <ul class="dropdown-menu border-0 rounded-0 flex-column">
+                                <li><a class="dropdown-item small text-capitalize" href="#">Blog Home</a></li>
+                                <li><a class="dropdown-item small text-capitalize" href="#">Blog Single</a></li>
+                                <li><a class="dropdown-item small text-capitalize" href="#">Level 2</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Elements</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Contact</a>
+                        </li>
+                    </ul>
+                    <div class="social-icons d-flex gap-3">
+                        <a href="#" class="text-white-50 small"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="text-white-50 small"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" class="text-white-50 small"><i class="fa-brands fa-dribbble"></i></a>
+                        <a href="#" class="text-white-50 small"><i class="fa-brands fa-behance"></i></a>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </div>
-    <div class="hero-section position-relative text-white d-flex justify-content-center align-items-center flex-column text-center gap-3">
+    <div
+        class="hero-section position-relative text-white d-flex justify-content-center align-items-center flex-column text-center gap-3">
         <span class="text-uppercase z-1">Don’t look further, This is your Dentist</span>
         <h1 class=" z-1 fw-bolder">Authentic Dental Service</h1>
-        <p class="z-1 w-75">If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each. You may be saying to yourself.</p>
+        <p class="z-1 w-75">If you are looking at blank cassettes on the web, you may be very confused at the difference
+            in price. You may see some for as low as $.17 each. You may be saying to yourself.</p>
         <button class="btn text-uppercase z-1 text-white rounded-0 px-4 py-2 small fw-medium">Get Started</button>
+    </div>
+    <div
+        class="schedule-section py-5 d-flex flex-column justify-content-center align-items-center gap-4 container bg-white rounded-3 text-center position-relative">
+        <h1 class="m-0 fw-bolder">Opening Hours</h1>
+        <p class="m-0">Get ready to cast your vote and select the right one</p>
+        <span class="fw-bold small px-4 py-2"><i class="fa-solid fa-circle small"></i> We are open Now</span>
+        <table class="small">
+            <tr>
+                <td class="text-end fw-lighter">Monday - Friday</td>
+                <td class="px-3 fw-lighter">:</td>
+                <td class="text-body-tertiary fw-lighter">10:00am to 05:00pm</td>
+            </tr>
+            <tr>
+                <td class="text-end fw-lighter">Saturday</td>
+                <td class="px-3 fw-lighter">:</td>
+                <td class="text-body-tertiary fw-lighter">12:00am to 03:00pm</td>
+            </tr>
+            <tr>
+                <td class="text-end fw-lighter">Sunday</td>
+                <td class="px-3 fw-lighter">:</td>
+                <td class="text-body-tertiary fw-lighter">closed</td>
+            </tr>
+        </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
