Made Services Section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="top-bar sticky-top bg-white">
         <div class="upper-bar position-relative pt-3">
-            <div class="top-upper-bar position-relative d-flex justify-content-between align-items-center container">
+            <div class="top-upper-bar position-relative d-flex justify-content-around align-items-center bg-white py-3">
                 <img src="assests/images/logo/logo.png" alt="Dentist Logo">
                 <div class="contact">
                     <span class="small px-3 py-2 me-2">+953 012 3654 896</span>
@@ -24,7 +24,7 @@
                     <i class="fa-solid fa-bars d-none"></i>
                 </div>
             </div>
-            <nav class="navbar z-1 navbar-expand container position-absolute start-50 translate-middle-x mt-3">
+            <nav class="navbar z-1 navbar-expand container position-absolute start-50 translate-middle-x">
                 <div class="container-fluid d-flex">
                     <ul class="navbar-nav mb-2 mb-lg-0 text-uppercase small">
                         <li class="nav-item">
@@ -79,7 +79,7 @@
     </div>
     <div
         class="schedule-section py-5 d-flex flex-column justify-content-center align-items-center gap-4 container bg-white rounded-3 text-center position-relative">
-        <h1 class="m-0 fw-bolder">Opening Hours</h1>
+        <h1 class="m-0 fw-bolder fs-2">Opening Hours</h1>
         <p class="m-0">Get ready to cast your vote and select the right one</p>
         <span class="fw-bold small px-4 py-2"><i class="fa-solid fa-circle small"></i> We are open Now</span>
         <table class="small">
@@ -99,6 +99,42 @@
                 <td class="text-body-tertiary fw-lighter">closed</td>
             </tr>
         </table>
+    </div>
+    <div class="services-section container">
+        <div class="ss-head text-center">
+            <h1 class="fw-bold fs-2">What we Offer to our Customers</h1>
+            <p class="small text-body-tertiary">Who are in extremely love with eco friendly system.</p>
+        </div>
+        <div class="ss-body mt-5 d-flex justify-content-center align-items-center gap-4 flex-lg-nowrap flex-wrap">
+            <div class="card rounded-0 border-0" style="width: 18rem;">
+                <img src="assests/images/services/service-1.png" class="" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold fs-5">Popular Use Of The Internet</h5>
+                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.</p>
+                </div>
+            </div>
+            <div class="card rounded-0 border-0" style="width: 18rem;">
+                <img src="assests/images/services/service-2.png" class="" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold fs-5">Protective Preventative</h5>
+                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.</p>
+                </div>
+            </div>
+            <div class="card rounded-0 border-0" style="width: 18rem;">
+                <img src="assests/images/services/service-3.png" class="" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold fs-5">Download Free Songs</h5>
+                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.</p>
+                </div>
+            </div>
+            <div class="card rounded-0 border-0" style="width: 18rem;">
+                <img src="assests/images/services/service-4.png" class="" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold fs-5">A Discount Toner Cartridge</h5>
+                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.</p>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
