Added Testinomials Section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -110,31 +112,205 @@
                 <img src="assests/images/services/service-1.png" class="" alt="...">
                 <div class="card-body">
                     <h5 class="card-title fw-bold fs-5">Popular Use Of The Internet</h5>
-                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.</p>
+                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys
+                        will be boys,” women face higher conduct women face higher conduct.</p>
                 </div>
             </div>
             <div class="card rounded-0 border-0" style="width: 18rem;">
                 <img src="assests/images/services/service-2.png" class="" alt="...">
                 <div class="card-body">
                     <h5 class="card-title fw-bold fs-5">Protective Preventative</h5>
-                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.</p>
+                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys
+                        will be boys,” women face higher conduct women face higher conduct.</p>
                 </div>
             </div>
             <div class="card rounded-0 border-0" style="width: 18rem;">
                 <img src="assests/images/services/service-3.png" class="" alt="...">
                 <div class="card-body">
                     <h5 class="card-title fw-bold fs-5">Download Free Songs</h5>
-                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.</p>
+                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys
+                        will be boys,” women face higher conduct women face higher conduct.</p>
                 </div>
             </div>
             <div class="card rounded-0 border-0" style="width: 18rem;">
                 <img src="assests/images/services/service-4.png" class="" alt="...">
                 <div class="card-body">
                     <h5 class="card-title fw-bold fs-5">A Discount Toner Cartridge</h5>
-                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.</p>
+                    <p class="card-text text-body-tertiary small">inappropriate behavior is oftenlaug hed off as “boys
+                        will be boys,” women face higher conduct women face higher conduct.</p>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="banner-section row w-100">
+        <div class="col-lg-6 col-12"
+            style="background-image: url(assests/images/banner/image.png); background-size: cover; background-position: center;">
+        </div>
+        <div class="col-lg-6 col-12 px-5 d-flex justify-content-center align-items-start flex-column gap-4"
+            style="padding: 120px 0px;">
+            <h1 class="text-white fw-bold">Who we are <br>
+                to Serve the nation</h1>
+            <p class="small text-secondary">inappropriate behavior is often laughed off as “boys will be boys,” women
+                face higher conduct standards
+                especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond
+                reproach.</p>
+            <div class="banner-cards d-flex flex-lg-nowrap flex-wrap justify-content-start align-items-center gap-4">
+                <div class="banner-card d-flex flex-column justify-content-center align-items-start">
+                    <span class="material-symbols-outlined fs-2">
+                        diamond
+                    </span>
+                    <h5 class="fw-bold text-white">Expert Services</h5>
+                    <p class="small text-secondary">Usage of the Internet is becoming more common due to rapid
+                        advancement of technology.</p>
+                </div>
+                <div class="banner-card d-flex flex-column justify-content-center align-items-start">
+                    <span class="material-symbols-outlined fs-2">
+                        deskphone
+                    </span>
+                    <h5 class="fw-bold text-white">Great Support</h5>
+                    <p class="small text-secondary">Usage of the Internet is becoming more common due to rapid
+                        advancement of technology.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="testinomials-section d-flex flex-column justify-content-center align-items-center">
+        <div
+            class="ts-head d-flex justify-content-md-between justify-content-center w-100 text-center flex-wrap align-items-center">
+            <h1 class="fw-bold">Feedback from our real clients</h1>
+            <p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of
+                Virtual Game.</p>
+        </div>
+        <div class="ts-body mt-5">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="d-flex justify-content-center row gap-3">
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-1.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-2.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-3.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center row gap-3">
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-1.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-2.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-3.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center row gap-3">
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-1.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-2.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                            <div class="card col-md-5 col-12 mt-4 col-lg-3 px-0 py-5">
+                                <img src="assests/images/testinomials/testi-3.png" class="w-25 align-self-center" alt="...">
+                                <div
+                                    class="card-body w-100 px-5 py-4 bg-white d-flex flex-column justify-content-center align-items-center gap-2 text-center">
+                                    <p class="small text-center text-body-tertiary">Accessories Here you can find the best computer accessory for your laptop,
+                                        monitor, printer, scanner, speaker, projector, hardware and more. laptop
+                                        accessory</p>
+                                    <h5 class="card-title fw-bold">Mark Alviro Wiens</h5>
+                                    <h6 class="card-subtitle small text-body-tertiary text-center">CEO at Google</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mt-4">
+                    <div class="carousel-indicators position-static mt-4">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="rounded-circle active" aria-label="Slide 1" aria-current="true"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            class="rounded-circle" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            class="rounded-circle" aria-label="Slide 3"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
