Added Consultants Section

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
     </div>
     <div class="testinomials-section d-flex flex-column justify-content-center align-items-center">
         <div
-            class="ts-head d-flex justify-content-md-between justify-content-center w-100 text-center flex-wrap align-items-center">
+            class="ts-head d-flex justify-content-center w-100 text-center flex-wrap align-items-center text-lg-center align-items-center flex-column">
             <h1 class="fw-bold">Feedback from our real clients</h1>
-            <p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of
+            <p class="text-body-tertiary small mt-3 w-50">It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of
                 Virtual Game.</p>
         </div>
         <div class="ts-body mt-5">
@@ -310,7 +310,30 @@
                 </div>
             </div>
         </div>
-
+    </div>
+    <div class="consultants-section">
+        <div class="cs-head text-center">
+            <h1 class="fw-bold">Our Consultants</h1>
+            <p class="text-body-tertiary small w-50 mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="cs-body mt-5 d-flex justify-content-center align-items-center gap-4">
+            <div class="consultant d-flex justify-content-end align-items-center flex-column text-center" style="background-image: url(assests/images/consultants/consultant-1.png); background-size: cover;">
+                <h5 class="text-white fw-bold opacity-0 z-1">Andy Florence</h5>
+                <p class="small text-white opacity-0 z-1">inappropriate behavior</p>
+            </div>
+            <div class="consultant d-flex justify-content-end align-items-center flex-column text-center" style="background-image: url(assests/images/consultants/consultant-2.png); background-size: cover;">
+                <h5 class="text-white fw-bold opacity-0 z-1">Andy Florence</h5>
+                <p class="small text-white opacity-0 z-1">inappropriate behavior</p>
+            </div>
+            <div class="consultant d-flex justify-content-end align-items-center flex-column text-center" style="background-image: url(assests/images/consultants/consultant-3.png); background-size: cover;">
+                <h5 class="text-white fw-bold opacity-0 z-1">Andy Florence</h5>
+                <p class="small text-white opacity-0 z-1">inappropriate behavior</p>
+            </div>
+            <div class="consultant d-flex justify-content-end align-items-center flex-column text-center" style="background-image: url(assests/images/consultants/consultant-4.png); background-size: cover;">
+                <h5 class="text-white fw-bold opacity-0 z-1">Andy Florence</h5>
+                <p class="small text-white opacity-0 z-1">inappropriate behavior</p>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
