--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <p class="text-body-tertiary small w-50 mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
-        <div class="cs-body mt-5 d-flex justify-content-center align-items-center gap-4">
+        <div class="cs-body mt-5 d-flex justify-content-center align-items-center gap-4 flex-wrap">
             <div class="consultant d-flex justify-content-end align-items-center flex-column text-center"
                 style="background-image: url(assests/images/consultants/consultant-1.png); background-size: cover;">
                 <h5 class="text-white fw-bold opacity-0 z-1">Andy Florence</h5>
@@ -446,8 +446,22 @@
         </div>
     </div>
 
-    <div class="appoinment-section">
-        
+    <div class="appoinment-section row w-100">
+        <div class="as-img col-lg-6 col-12"></div>
+        <div class="as-cont col-lg-6 col-12 px-5 d-flex flex-column justify-content-center align-items-start gap-4">
+            <h1 class="text-white fw-bold">Book an<br/>Appoinment</h1>
+            <input type="text" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Patient Name" aria-label="Patient Name" aria-describedby="basic-addon2">
+            <div class="input-group gap-4 flex-wrap">
+                <input type="number" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Phone" aria-label="Phone" aria-describedby="basic-addon2">
+                <input type="email" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Email address" aria-label="Email address" aria-describedby="basic-addon2">
+            </div>
+            <div class="input-group gap-4 flex-wrap">
+                <input type="text" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Date of birth" aria-label="Date of birth" aria-describedby="basic-addon2">
+                <input type="email" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Appointment date" aria-label="Appointment date" aria-describedby="basic-addon2">
+            </div>
+            <textarea class="form-control bg-transparent rounded-0 border-secondary-subtle" aria-label="message" placeholder="Message"></textarea>
+            <button class="btn text-uppercase z-1 text-white rounded-0 px-4 py-2 small fw-medium align-self-end small fw-semibold">Confirm Booking</button>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
